[package]
name = "vxn2-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN2 CLAP plugin shell (clack)."

[lib]
# cdylib for the host-loadable plugin; rlib so integration tests (0020) can
# link the plugin in-process without dlopen and get real panic backtraces;
# staticlib for clap-wrapper to link into a bundled standalone / VST3 (E014).
crate-type = ["cdylib", "rlib", "staticlib"]

# `test-support` gates the EDITS const used by both `src/lib.rs` unit tests
# and `tests/smoke.rs` integration tests. Off by default; activated via the
# self-referencing dev-dependency below so `cargo test` picks it up.
[features]
test-support = []

[dependencies]
vxn2-engine = { workspace = true }
vxn2-app = { workspace = true }
vxn2-ui-web = { workspace = true }
vxn-core-app = { workspace = true }
vxn-core-clap = { workspace = true }
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = [
    "audio-ports",
    "note-ports",
    "params",
    "state",
    "gui",
    "timer",
    "latency",
    "clack-plugin",
] }

[dev-dependencies]
clack-host = { workspace = true }
# The integration smoke test (0020) drives the plugin via clack-host and
# reaches into the host side of `params` + `state`. Re-declare the
# extensions crate here with `clack-host` so those host-side methods (e.g.
# `PluginState::save`/`load`, `PluginParams::get_value`) compile.
clack-extensions = { workspace = true, features = [
    "params",
    "state",
    "latency",
    "clack-host",
] }
# editor_smoke (0032) reuses the shared IPC parser to drive the
# controller pipeline without instantiating a WebView.
vxn-core-ui-web = { workspace = true }
# Self-reference to activate the `test-support` feature when running tests.
# This ensures `EDITS` (gated by that feature in src/lib.rs) is visible to
# both the unit tests in src/ and integration tests in tests/.
vxn2-clap = { path = ".", features = ["test-support"] }
# Generic test-support helpers (push_param_event, event_log) from the
# shared clack scaffold crate.
vxn-core-clap = { workspace = true, features = ["test-support"] }
