[package]
name = "vxn2-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Shared low-level primitives (E027/0117): one-pole smoother, FTZ guard,
# MIDI→Hz, tempo-sync subdivision table. Replaces vxn-2's forked copies.
vxn-core-utils = { workspace = true }

[dev-dependencies]
