[package]
name = "vxn2-osc-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
vxn2-dsp = { workspace = true }
vxn2-engine = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "sine"
harness = false

[[bench]]
name = "algo3"
harness = false

[[bench]]
name = "op_voice"
harness = false

[[bench]]
name = "voice"
harness = false

[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "lfo"
harness = false

[[bench]]
name = "matrix"
harness = false

[[bench]]
name = "delay"
harness = false

[[bench]]
name = "cleanup"
harness = false

[[bench]]
name = "reverb"
harness = false

[[bench]]
name = "master_chain"
harness = false
